(Fix) Fixed CORS issue in production
